--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+# Ignore node_modules and environment files
+node_modules/
+dist/
+angular.json
+package-lock.json
+.env
